@@ -1,10 +1,12 @@
 use LibXML::Node;
 use W3C::DOM;
+use LibXML::_Validator;
 
 #| LibXML DTD Handling
 unit class LibXML::Dtd
     is LibXML::Node
-    does W3C::DOM::DocumentType;
+    does W3C::DOM::DocumentType
+    does LibXML::_Validator;
 
   =begin pod
   =head2 Synopsis
