@@ -1,0 +1,5 @@
+#| abstract validation role. Performed by LibXML::{Dtd|Schema|RelaxNG}
+unit role LibXML::_Validator;
+
+method validate {...}
+method is-valid {...}
